@@ -130,6 +130,13 @@ the specified limit, B<makehistory> sleeps until it goes below the limit.
 
 =item *
 
+As UTF-8 is the default character set in S<RFC 3977>, C<ctlinnd pause>,
+C<ctlinnd readers>, C<ctlinnd reject>, C<ctlinnd throttle> and
+C<nnrpd -r> commands now require the given reason to be encoded in UTF-8,
+so that it can be properly sent to news readers.
+
+=item *
+
 The output of consistency checks for article storage and the F<history>
 file no longer appears by default when C<cnfsstat -a> is used.  A new B<-v>
 flag has been added to B<cnfsstat> so as to see it.
